# clinvar-submission-service

./: .gitignore  AGENTS.md  README.md  build.js  docs.json  justfile  pyproject.toml
docs/: design.md  how-to.md
docs/plans/: 001-models.md  002-api-and-dashboard.md
docs/prompts/: 02-update-specific-readme.md  04-design-discussion.md
infra/ansible/playbooks/: init.yml
infra/terraform/: .terraform.lock.hcl  ip-address.tf  main.tf  server.tf  ssh-key.tf  subdomain.tf
scripts/: add_classification.py  add_curation.py
src/: manage.py
src/api/: tests.py  urls.py  views.py
src/classification/: README.md  models.py  serializers.py  tests.py  urls.py  views.py
src/classification/constants/: models.py
src/classification/fixtures/: dummy.json
src/classification/migrations/: 0001_initial.py  0002_rename_ca_id_historicalvariant_car_id_and_more.py  0003_classification_affiliation_historicalclassification_affiliation.py  0004_alter_classification_affiliation_and_more.py
src/common/: README.md  context_processors.py  tests.py
src/config/: README.md  settings.py  urls.py
src/config/settings/: base.py  dev.py  prod.py
src/core/: README.md  tests.py  urls.py  views.py
src/curation/: README.md  models.py  serializers.py  tests.py  urls.py  views.py
src/curation/constants/: models.py
src/curation/fixtures/: dummy.json
src/curation/migrations/: 0001_initial.py  0002_rename_ca_id_historicalvariant_car_id_and_more.py  0004_alter_curation_affiliation_and_more.py  (+1 more)
src/static/: README.md
src/templates/: 400.html  403.html  404.html  500.html  README.md
(+10 files in other folders)
