[project]
name = "clinvar-submission-service"
version = "0.1.0"
description = "The ClinVar Submission Service (CVSS) manages submissions from curation interfaces to ClinVar."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.4.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[[tool.ty.overrides]]
include = ["src/common/tests.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
